# Automation-Ecosystem

./: .env.example  .env.production  .gitignore  PACKAGING.md  README.md  USER_GUIDE.md  backend.spec  index.html  package-lock.json  package.json  patch.py  pyproject.toml  pyrightconfig.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
api/: dependencies.py  local_auth_cache.py  main.py  schemas.py  secure_store.py  security.py  supabase_license.py
core/: __init__.py  account_brain.py  account_clustering.py  adspower_client.py  adversarial_engine.py  ai_key_store.py  ai_router.py  angle_engine.py  attribution_engine.py  attribution_store.py  behavior_engine.py  behavioral_brain.py  browser_context.py  browser_providers.py  budget_allocator.py  content_decision.py  content_engine.py  content_monetization_engine.py  conversion_tracker.py  cross_account_coordinator.py  dedup.py  detector_simulator.py  distribution_engine.py  engagement_simulator.py  expansion_engine.py  feed_engine.py  fingerprint_engine.py  fleet_coordinator.py  geo_validator.py  global_memory.py  identity_graph.py  identity_manager.py  input_engine.py  license_key.py  license_status.py  license_store.py  lifecycle_engine.py  lifecycle_manager.py  login_diagnostics.py  machine_id.py  (+48 more)
data/: product_state.db-shm  product_state.db-wal  profit_state.db-shm  profit_state.db-wal
database/: __init__.py  analytics.py  database.py  schema.sql  schema_postgres.sql
electron/: main.js  preload.js  splash.html
execution/: __init__.py  account_manager.py  account_warmup.py  approval_queue.py  content_lifecycle.py  content_memory.py  content_pipeline.py  content_scraper.py  conversion_optimizer.py  cross_layer_learner.py  execution_brain.py  hook_optimizer.py  metrics_collector_playwright.py  orchestrator.py  platform_adapter.py  portfolio_allocator.py  publisher_playwright.py  safe_metrics_collector.py  scheduler.py  smart_scheduler.py  tracker_real.py  trend_crawler.py  trend_filter.py
migrations/: 001_core_engine.sql  002_worker_runtime_tasks.sql
scratch/: check_all_recent_tasks.py  check_job_tasks.py  (+14 more)
(+256 files in other folders)
