[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-ecosystem"
version = "0.1.0"
description = "Durable local-first automation execution engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]>=3.2.0,<4.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "redis>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["automation_engine*", "workers*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
