[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-ecosystem"
version = "0.1.0"
description = "Durable local-first automation execution engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "cryptography>=42.0.0,<46.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "playwright>=1.44.0,<2.0.0",
    # TikTok pipeline
    "openai>=1.30.0,<2.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "supabase>=2.3.0,<3.0.0",
    "yt-dlp>=2024.5.0",
    "Pillow>=10.0.0,<11.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]
desktop = [
    "pyinstaller>=6.10.0,<7.0.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["api*", "workers*", "database*", "core*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Windows"
venvPath = "."
venv = ".venv"
extraPaths = ["."]
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false
